bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: identifier expected but 'false' found.
                 else {estSurMessage():false}
                                       ^